# bageri

./: .gitignore  Cargo.toml
.github/workflows/: release.yml
src/: cli.rs  config.rs  html.rs  log.rs  main.rs  watcher.rs
